tests/failing/scope.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk fail

# /tk error
1 + 2;

# /tk error
{}

# /tk error
{ i32 var; }

fn test_func() {
    {
        i32 var = 0;
    }

    # /tk error
    var = 2;
}
